tests/fixtures/errors/field_access_on_string.lazy
// error: Type mismatch
//   --> tests/fixtures/errors/field_access_on_string.lazy:11:9
//    |
// 11 | "hello".length
//    |         ^-----
//
// Expected `object` for accessing field `.length` on string, but found `string`.
//
// help: Make sure you're using compatible types for this operation.

"hello".length
